--- a/style.css
+++ b/style.css
@@ -4,14 +4,6 @@
  box-sizing: border-box;
 }
 
-.header{
-    width:100%;
-    height:40px;
-    background-color: cadetblue;
-    display:flex;
-    align-items: center;
-    justify-content: space-between;
-}
 
 .navbar{
     width:100%;
@@ -52,8 +44,6 @@
      padding-top: 20px;  
      display: flex;
      flex-wrap: wrap;
-    
-
 } 
 .containbox1{
     width:100%;
@@ -114,4 +104,28 @@
 
 .hide{
     display:none;
+}
+
+@media (max-width:768px) {
+    .box-container{
+        width:100%;
+        height:100vh;
+    }
+    .containbox{
+        width:60%;
+        height:61vh;
+        box-shadow: 0px 0px 1px 2px;
+        border-radius:10px;
+        margin-top:70px;
+    }
+    .resetbtn button{
+        width:100px;
+        height:25px;
+        font-weight: 400;
+        font-size: 1rem;
+        border: none;
+        border-radius:10px;
+        box-shadow: 0px 0px 1px 2px;
+    
+    } 
 }
